--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
         <main id="main">
               <h1 id="title"> Walter Elias Disney</h1>
               <p><em>"The way to get started is to quit talking and begin doing"</em></p>
-              <figure id=picture>
+              <div id=img-div>
                 <img
+                  id="image"  
                   src="https://upload.wikimedia.org/wikipedia/commons/d/df/Walt_Disney_1946.JPG"
                   alt="Walt Disney looking at the camera. Airstyle and mustache look."
                 >
                 <figcaption id="img-caption">
                   Walt Disney
                 </figcaption>
-              </figure>
-              <section id="time-line">
+              </div>
+              <section id="tribute-info">
                 <h3>Here's a time line of Walt Disney's life:</h3>
                 <ul>
                   <li>
